Added GoogleModelfor mappin from GoogleAPI response, implemented mappin proccess in GoogleMapController